--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
   },
   "dependencies": {
     "express": "^4.17.2",
-    "knex": "^2.3.0",
+    "knex": "^2.5.1",
+    "semver": "^7.5.4",
+    "simple-update-notifier": "^2.0.0",
     "sqlite3": "^5.1.2",
     "superagent": "7.1.1"
   },
@@ -48,7 +50,7 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "nodemon": "^2.0.15",
+    "nodemon": "^3.0.2",
     "npm-run-all": "^4.1.5",
     "react": "^18.0.2",
     "react-dom": "^18.2.0",
