add and delete working

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,5 +22,5 @@
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */,
     "noEmit": true
   },
-  "include": ["server/**/*", "client/**/*"]
+  "include": ["server/**/*", "client/**/*", "client/hooks.ts", "client/index.tsx", "client/store.ts"]
 }
