--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dev": "run-p dev:client dev:server dev:css",
     "dev:client": "vite",
     "dev:server": "nodemon --watch server/",
-    "dev:css": "tailwindcss -i ./client/styles/input.css -o ./public/output.css --watch",
+    "dev:css": "tailwindcss -i ./dist/input.css -o ./dist/output.css --watch",
     "build": "run-s build:client build:server",
     "build:client": "vite build",
     "build:server": "tsc -p server/tsconfig.json",
@@ -59,7 +59,8 @@
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
     "supertest": "^6.2.2",
-    "tailwindcss": "^3.3.2",
+    "tailwindcss": "^3.3.6",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "~4.8.4",
     "vite": "^4.3.3",
