--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "boilerplate-fullstack-scss",
+  "name": "rocio-peralta-todos",
   "version": "2.0.0",
   "main": "server/index.ts",
   "license": "MIT",
