--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     ]
   },
   "dependencies": {
+    "@testing-library/jest-dom": "^6.1.6",
+    "@testing-library/user-event": "^14.5.1",
     "express": "^4.17.2",
+    "jsdom": "^23.0.1",
     "knex": "^2.5.1",
     "semver": "^7.5.4",
     "simple-update-notifier": "^2.0.0",
@@ -64,7 +67,7 @@
     "ts-node": "^10.9.1",
     "typescript": "~4.8.4",
     "vite": "^4.3.3",
-    "vitest": "^0.30.1"
+    "vitest": "^1.1.0"
   },
   "prettier": {
     "semi": false,
