--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@testing-library/jest-dom": "^6.1.6",
     "@testing-library/user-event": "^14.5.1",
     "express": "^4.17.2",
+    "jest": "^29.7.0",
     "jsdom": "^23.0.1",
     "knex": "^2.5.1",
     "semver": "^7.5.4",
@@ -44,6 +45,7 @@
     "@types/react": "^18.0.23",
     "@types/react-dom": "^18.0.7",
     "@types/superagent": "^4.1.24",
+    "@types/testing-library__jest-dom": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.0",
     "@vitest/coverage-c8": "^0.30.1",
     "eslint": "^8.10.0",
