--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     ]
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.2.4",
     "@testing-library/jest-dom": "^6.1.6",
     "@testing-library/user-event": "^14.5.1",
     "express": "^4.17.2",
