--- a/package.json
+++ b/package.json
@@ -63,15 +63,13 @@
     "react": "^18.0.2",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
-    "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
     "supertest": "^6.2.2",
     "tailwindcss": "^3.3.6",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "~4.8.4",
-    "vite": "^4.3.3",
-    "vitest": "^1.1.0"
+    "vite": "^4.3.3"
   },
   "prettier": {
     "semi": false,
